Update languages part 2 - 3/3

--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -16,14 +16,14 @@ OPTION_VALUE_TITLE=Nimi
 OPTION_VALUE_ARTIST=Artisti
 OPTION_VALUE_TITLE2=Nimi2
 OPTION_VALUE_ARTIST2=Artisti2
-;TODO: OPTION_VALUE_YEAR=Year
-;TODO: OPTION_VALUE_DECADE=Decade
+OPTION_VALUE_YEAR=Vuosi
+OPTION_VALUE_DECADE=Vuosikymmen
 OPTION_VALUE_PLAYLIST=Kappalelista
 
-;TODO: OPTION_VALUE_BORDERLESS=Borderless
+OPTION_VALUE_BORDERLESS=Reunuksettomat
 
 OPTION_VALUE_WHENNOVIDEO=Kun ei videota
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=Kun ei ole videota ja kuvaa
 
 OPTION_VALUE_SMALL=Pieni
 OPTION_VALUE_BIG=Iso
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Auto
 OPTION_VALUE_SEC=Sekunti
 OPTION_VALUE_SECS=Sekuntia
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+OPTION_VALUE_PLAIN=Tyylitelty
+OPTION_VALUE_OLINE1=Ohut reuna
+OPTION_VALUE_OLINE2=Paksu reuna
 
 OPTION_VALUE_SIMPLE=Yksinkertainen
 OPTION_VALUE_ZOOM=Zoom
@@ -69,7 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Valitse pelaajat
 OPTION_VALUE_OPEN_MENU=Avaa valikko
 
 SING_LOADING=Moikkamoi! Tää systeemi niinku lataa...
-;TODO: SING_LOADING_SONGS=Loading songs
+SING_LOADING_SONGS=Ladataan kappaleita
 ;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
 ;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=Asetukset
 SING_OPTIONS_GAME=Peli
 SING_OPTIONS_GRAPHICS=Kuva
 SING_OPTIONS_SOUND=Äänet
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=Lyriikat
 SING_OPTIONS_THEMES=Teemat
 SING_OPTIONS_RECORD=Mikrofonit
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Vaikeustaso
 SING_OPTIONS_GAME_LANGUAGE=Kieli
 SING_OPTIONS_GAME_TABS=Välilehdet
 SING_OPTIONS_GAME_SORTING=Järjestys
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Aktivoi peliohjain
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Kuva-asetukset
 SING_OPTIONS_GRAPHICS_DESC=Kuva-asetukset
 SING_OPTIONS_GRAPHICS_RESOLUTION=Resoluutio
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Kokoruutu
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Laulun efektit
+SING_OPTIONS_GRAPHICS_SCREENFADE=Kuvan feidaus
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Animaatiot
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualisointi
 SING_OPTIONS_GRAPHICS_LINEBONUS=Rivibonus
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Videon koko
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=Kanava
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Erikoisasetukset
 SING_OPTIONS_ADVANCED_DESC=Erikoisasetukset
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Virheentunnistus
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Ääniaallokko
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Turvakyselyt
 SING_OPTIONS_ADVANCED_LINEBONUS=Rivibonus
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Kappaleen valinnan jälkeen
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Automaattinen tiimipeli
 
@@ -172,14 +170,14 @@ SING_LEGEND_NAVIGATE=Selaa
 SING_LEGEND_CONTINUE=Eteenpäin
 SING_LEGEND_ESC=Takaisin
 
-;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=Profiilit
+SING_PLAYER_READY=Pelaajat valmiina laulamaan
+SING_PLAYER_COUNT=Pelaajien lukumäärä
+SING_PLAYER_EDIT=Muokkaa soitinta
+SING_PLAYER_NAME=Kirjoita nimesi
+SING_PLAYER_COLOR=Valitse väri
+SING_PLAYER_LEVEL=Valitse taso
+SING_PLAYER_AVATAR=Valitse avatar
 
 SING_DIFFICULTY_DESC=Valitse vaikeustaso
 SING_DIFFICULTY_WHEREAMI=Vaikeustaso
@@ -194,14 +192,14 @@ SING_SONG_SELECTION_GOTO=Siirry...
 SING_SONG_SELECTION=Kappale
 SING_SONG_SELECTION_MENU=Valikko
 SING_SONG_SELECTION_PLAYLIST=Kappalelista
-;TODO: SING_SONG_IN_CAT=Song
+SING_SONG_IN_CAT=Laulu
 SING_SONGS_IN_CAT=Kappaletta
 PLAYLIST_CATTEXT=Kappalelista: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_TITLE=Legenda
+SING_SONG_SELECTION_LEGEND_VIDEO=Video
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_DUET=Duetto
 
 SING_TOTAL=Pisteesi
 SING_MODE=Soololaulu
@@ -345,19 +343,19 @@ MODE_RANDOM_NAME=Satunnaismoodi
 ;TODO: MODE_HOLDTHELINEBLIND_NAME=Hold the Blind
 ;TODO: MODE_HOLDTHELINEBLIND_DESC=Keep your rating above the line for the longest, but with the notes hidden!
 
-;TODO: MODE_7000POINTS_NAME=Until 7000
+MODE_7000POINTS_NAME=Asti 7000
 ;TODO: MODE_7000POINTS_DESC=Race to 7000 Points!
 
 ;TODO: MODE_7000POINTSBLIND_NAME=Blind 7000
 ;TODO: MODE_7000POINTSBLIND_DESC=Race to 7000 points, but without seeing the notes!
 
-MODE_5000POINTS_NAME=♥5000♥
+MODE_5000POINTS_NAME=Asti 5000
 ;TODO: MODE_5000POINTS_DESC=Race to 5000 Points!
 
 ;TODO: MODE_5000POINTSBLIND_NAME=Blind 5000
 ;TODO: MODE_5000POINTSBLIND_DESC=Race to 5000 points, but without seeing the notes!
 
-;TODO: MODE_2000POINTS_NAME=Until 2000
+MODE_2000POINTS_NAME=Asti 2000
 ;TODO: MODE_2000POINTS_DESC=Race to 2000 Points!
 
 ;TODO: MODE_2000POINTSBLIND_NAME=Blind 2000
@@ -427,14 +425,14 @@ STAT_DESC_BANDS=Suosituimmat yhtyeet
 STAT_DESC_BANDS_REVERSED=Epäsuosituimmat yhtyeet
 STAT_FORMAT_BANDS=%0:s \n %1:dx Laulettu
 
-SCREENSHOT_SAVED=Screenshot saved
-SCREENSHOT_FAILED=Couldn''t save screenshot
+;TODO: SCREENSHOT_SAVED=Screenshot saved
+;TODO: SCREENSHOT_FAILED=Couldn''t save screenshot
 
-INFO_FILE_SAVED=File saved
-ERROR_SAVE_FILE_FAILED=Couldn''t save file
-ERROR_FILE_NOT_FOUND=File not found
+;TODO: INFO_FILE_SAVED=File saved
+;TODO: ERROR_SAVE_FILE_FAILED=Couldn''t save file
+;TODO: ERROR_FILE_NOT_FOUND=File not found
 
-ENCODING_ERROR_ASK_FOR_UTF8=Cannot save changes in current encoding. Convert to UTF-8?
+;TODO: ENCODING_ERROR_ASK_FOR_UTF8=Cannot save changes in current encoding. Convert to UTF-8?
 
 MSG_ERROR_TITLE=Virhe
 MSG_INFO_TITLE=Informaatio
@@ -451,19 +449,19 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Kappaletta ei voitu avata: Tiedostoa ei löyty
 ERROR_CORRUPT_SONG_NO_NOTES=Kappaletta ei voitu avata: Ei löytynyt yhtään nuottia
 ERROR_CORRUPT_SONG_NO_BREAKS=Kappaletta ei voitu avata: Ei löytynyt yhtään rivinvaihtoa
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Kappaletta ei voitu avata: Virhe jäsentäessä riviä %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your record options
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphones. Please check your record options
+;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Pelaaja %d is assigned to multiple microphones. Tarkista mikrofoniasetukset
+;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Pelaaja %d is not assigned to a microphones. Tarkista mikrofoniasetukset
 
-;TODO: SING_OPTIONS_NETWORK=Internet
-;TODO: SING_OPTIONS_NETWORK_WHEREAMI=Internet Options
-;TODO: SING_OPTIONS_NETWORK_DESC=Internet General Settings
+SING_OPTIONS_NETWORK=Internet
+SING_OPTIONS_NETWORK_WHEREAMI=Internet-asetukset
+SING_OPTIONS_NETWORK_DESC=Internetin yleiset asetukset
 ;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Press key "Insert" to add user to this web...
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
-;TODO: SING_OPTIONS_NETWORK_USERNAME=Username
-;TODO: SING_OPTIONS_NETWORK_PASSWORD=Password
+SING_OPTIONS_NETWORK_USERNAME=Käyttäjätunnus
+SING_OPTIONS_NETWORK_PASSWORD=Salasana
 ;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
 SING_OPTIONS_NETWORK_AUTO_MODE=Auto
-;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER=Player
+SING_OPTIONS_NETWORK_AUTO_PLAYER=Pelaaja
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
@@ -472,18 +470,18 @@ SING_OPTIONS_NETWORK_AUTO_MODE=Auto
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_DELETE=Delete
 
-;TODO: OPTION_PLAYER_1=Player 1
-;TODO: OPTION_PLAYER_2=Player 2
-;TODO: OPTION_PLAYER_3=Player 3
-;TODO: OPTION_PLAYER_4=Player 4
-;TODO: OPTION_PLAYER_5=Player 5
-;TODO: OPTION_PLAYER_6=Player 6
+OPTION_PLAYER_1=Pelaaja 1
+OPTION_PLAYER_2=Pelaaja 2
+OPTION_PLAYER_3=Pelaaja 3
+OPTION_PLAYER_4=Pelaaja 4
+OPTION_PLAYER_5=Pelaaja 5
+OPTION_PLAYER_6=Pelaaja 6
 OPTION_ALL_PLAYERS=Kaikki
 OPTION_ALL_SCORES=Kaikki
 ;TODO: OPTION_VALUE_SAVE=Save
 ;TODO: OPTION_VALUE_SEND=Send
 
-;TODO: MSG_INSERT_USER_TITLE=%0:s
+MSG_INSERT_USER_TITLE=%0:s
 ;TODO: MSG_INSERT_USER_DESC=Fill the fields:
 ;TODO: MSG_INSERT_USER_ADD=Add
 MSG_INSERT_USER_CANCEL=Peruuta
@@ -511,17 +509,17 @@ MSG_INSERT_USER_CANCEL=Peruuta
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
 
-;TODO: SONG_SCORE_MAX=Best:
-;TODO: SONG_SCORE_MEDIA=Average:
+SONG_SCORE_MAX=Parhaat:
+SONG_SCORE_MEDIA=Keskiverto:
 
 ;TODO: SCORE_SEND_DESC=Send Score
 ;TODO: SCORE_SEND=Send
-;TODO: SCORE_SEND_PLAYER=Player
+SCORE_SEND_PLAYER=Pelaaja
 ;TODO: SCORE_SEND_OTHER_USER= Other Username
 ;TODO: SCORE_SAVE=Save
 
 ;TODO: SCORE_DOWNLOAD_TITLE=Download
-;TODO: SCORE_DOWNLOAD_SONG=Song:
+SCORE_DOWNLOAD_SONG=Laulu:
 ;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Peruuta
@@ -590,8 +588,8 @@ SING_OPTIONS_WEBCAM_RESOLUTION=Resoluutio
 ;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
 ;TODO: SING_OPTIONS_WEBCAM_FLIP=Flip
 SING_OPTIONS_WEBCAM_EFFECT=Tehoste
-;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
-;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
+SING_OPTIONS_WEBCAM_BRIGHTNESS=Kirkkaus
+SING_OPTIONS_WEBCAM_SATURATION=Kyllästys
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
 ;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
@@ -619,45 +617,45 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Aloituspiste
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
-;TODO: NAME_PLAYERS_COUNT=Number of Players
-;TODO: NAME_CURRENT_PLAYER=Player
+NAME_PLAYERS_COUNT=Pelaajien määrä
+NAME_CURRENT_PLAYER=Pelaaja
 
 SING_OPTIONS_GAME_SONGMENU=Kappalelistavalikko
-;TODO: OPTION_VALUE_ROULETTE=Roulette
-;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
-;TODO: OPTION_VALUE_CAROUSEL=Carousel
-;TODO: OPTION_VALUE_SLOT_MACHINE=Slot Machine
-;TODO: OPTION_VALUE_LIST=List
-;TODO: OPTION_VALUE_MOSAIC=Tile
+OPTION_VALUE_ROULETTE=Ruletti
+OPTION_VALUE_CHESSBOARD=Shakkilauta
+OPTION_VALUE_CAROUSEL=Karuselli
+OPTION_VALUE_SLOT_MACHINE=Peliautomaatti
+OPTION_VALUE_LIST=Lista
+OPTION_VALUE_MOSAIC=Laatta
 
 ;TODO: SING_OPTIONS_JUKEBOX=Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_DESC=Default Configurations of Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Options
 
 OPTION_VALUE_TO_SING=Laula
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
+OPTION_VALUE_ACTUAL=Ylempi
+OPTION_VALUE_NEXT=Pohja
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-;TODO: OPTION_VALUE_GRAY=Gray
-;TODO: OPTION_VALUE_WHITE=White
-;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
-;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-;TODO: OPTION_VALUE_LAVENDER=Lavender
-;TODO: OPTION_VALUE_BEIGE=Beige
-;TODO: OPTION_VALUE_TEAL=Teal
-;TODO: OPTION_VALUE_ORCHID=Orchid
-;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
-;TODO: OPTION_VALUE_PLUM=Plum
-;TODO: OPTION_VALUE_CHOCOLATE=Chocolate
-;TODO: OPTION_VALUE_GOLD=Gold
-;TODO: OPTION_VALUE_DARKBLUE=Dark Blue
-;TODO: OPTION_VALUE_SKY=Sky
-;TODO: OPTION_VALUE_HARLEQUIN=Harlequin
-;TODO: OPTION_VALUE_CYAN=Cyan
-;TODO: OPTION_VALUE_FLAME=Flame
+OPTION_VALUE_GRAY=Harmaa
+OPTION_VALUE_WHITE=Valkoinen
+OPTION_VALUE_TURQUOISE=Turkoosi
+OPTION_VALUE_SALMON=Lohi
+OPTION_VALUE_GREENYELLOW=Vihreä keltainen
+OPTION_VALUE_LAVENDER=Laventeli
+OPTION_VALUE_BEIGE=Beige
+OPTION_VALUE_TEAL=Tavi
+OPTION_VALUE_ORCHID=Orkidea
+OPTION_VALUE_STEELBLUE=Terässininen
+OPTION_VALUE_PLUM=Luumu
+OPTION_VALUE_CHOCOLATE=Suklaa
+OPTION_VALUE_GOLD=Kulta
+OPTION_VALUE_DARKBLUE=Tummansininen
+OPTION_VALUE_SKY=Taivas
+OPTION_VALUE_HARLEQUIN=Harlekiini
+OPTION_VALUE_CYAN=Syaani
+OPTION_VALUE_FLAME=Liekki
 
 ;TODO: JUKEBOX_SONGOPTIONS_VIDEO=Video Options
 ;TODO: JUKEBOX_SONGOPTIONS_VIDEO_ASPECT=Aspect
@@ -666,7 +664,7 @@ OPTION_VALUE_TO_SING=Laula
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Size
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
+JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Läpinäkyvyys
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Väri
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
