--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -5,8 +5,8 @@ OPTION_VALUE_EASY=簡単
 OPTION_VALUE_MEDIUM=普通
 OPTION_VALUE_HARD=難しい
 
-;TODO: OPTION_VALUE_ON=On
-;TODO: OPTION_VALUE_OFF=Off
+;TODO: OPTION_VALUE_ON=オン
+;TODO: OPTION_VALUE_OFF=オフ
 
 ;TODO: OPTION_VALUE_EDITION=Edition
 ;TODO: OPTION_VALUE_GENRE=Genre
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=設定
 SING_OPTIONS_GAME=ゲーム
 SING_OPTIONS_GRAPHICS=グラフィックス
 SING_OPTIONS_SOUND=音
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=歌詞
 SING_OPTIONS_THEMES=テーマ
 SING_OPTIONS_RECORD=録音
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=面倒
 SING_OPTIONS_GAME_LANGUAGE=言語
 SING_OPTIONS_GAME_TABS=タッブ
 SING_OPTIONS_GAME_SORTING=ソーティング
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=ゲームパッドを有効にする
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=グラフィックス
 SING_OPTIONS_GRAPHICS_DESC=グラフィックスの設定
 SING_OPTIONS_GRAPHICS_RESOLUTION=解像
 SING_OPTIONS_GRAPHICS_FULLSCREEN=フルスクリーン
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=曲のエフェクト
+SING_OPTIONS_GRAPHICS_SCREENFADE=画面・フェーディング
+SING_OPTIONS_GRAPHICS_LOADANIMATION=ロード・アニメーション
 SING_OPTIONS_GRAPHICS_VISUALIZER=可視化
 SING_OPTIONS_GRAPHICS_LINEBONUS=ライン・ボーナス
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=動画サイズ
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=チャネル
 
 SING_OPTIONS_ADVANCED_WHEREAMI=アドバンス設定
 SING_OPTIONS_ADVANCED_DESC=アドバンス設定
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=ディバッグ
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=オシロスコープ
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=消す場合は確認
 SING_OPTIONS_ADVANCED_LINEBONUS=ライン・ボーナス
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=歌った後は
 SING_OPTIONS_ADVANCED_PARTYPOPUP=自動的にパーティー・メニューへ
 
@@ -700,12 +698,12 @@ OPTION_VALUE_ALL=全部
 ;TODO: SING_ABOUT=About
 ;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+ABOUT_USDX_DEVELOPEDBY=によって開発された
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n 詳細は当社にお問い合わせください.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=によって開発された
+DEVELOPERS_OVERVIEW=このプロジェクトに貢献した人々:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n 詳細は当社にお問い合わせください.\n\nhttps://ultrastar-es.org
