--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=选项
 SING_OPTIONS_GAME=游戏
 SING_OPTIONS_GRAPHICS=画面
 SING_OPTIONS_SOUND=声音
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=歌词
 SING_OPTIONS_THEMES=主题
 SING_OPTIONS_RECORD=录音
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=难度
 SING_OPTIONS_GAME_LANGUAGE=语言
 SING_OPTIONS_GAME_TABS=标签
 SING_OPTIONS_GAME_SORTING=排列
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=激活游戏手柄
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=画面选项
 SING_OPTIONS_GRAPHICS_DESC=画面设置
 SING_OPTIONS_GRAPHICS_RESOLUTION=分辨率
 SING_OPTIONS_GRAPHICS_FULLSCREEN=全屏
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=演唱效果
+SING_OPTIONS_GRAPHICS_SCREENFADE=画面渐变
+SING_OPTIONS_GRAPHICS_LOADANIMATION=载入动画
 SING_OPTIONS_GRAPHICS_VISUALIZER=可视化
 SING_OPTIONS_GRAPHICS_LINEBONUS=加分线
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=影片大小
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=频道
 
 SING_OPTIONS_ADVANCED_WHEREAMI=高级选项
 SING_OPTIONS_ADVANCED_DESC=高级设置
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=调试
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=示波器
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=安全问题
 SING_OPTIONS_ADVANCED_LINEBONUS=加分线
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=选歌之后
 SING_OPTIONS_ADVANCED_PARTYPOPUP=自动派对菜单
 
@@ -451,8 +449,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=无法载入歌曲：文件未找到
 ERROR_CORRUPT_SONG_NO_NOTES=无法载入歌曲：找不到任何注释
 ERROR_CORRUPT_SONG_NO_BREAKS=无法载入歌曲：找不到任何分秆
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=无法载入歌曲：行 %0:d 解析错误
-ERROR_PLAYER_DEVICE_ASSIGNMENT=玩家 %d 被指定给多个麦克风，请检查您的录音选项
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=玩家 %d 没有指定麦克风，请检查您的录音选项
+ERROR_PLAYER_DEVICE_ASSIGNMENT=玩家 %d 被指定给多个麦克风，请检查您的麦克风选项
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=玩家 %d 没有指定麦克风，请检查您的麦克风选项
 
 ;TODO: SING_OPTIONS_NETWORK=Internet
 ;TODO: SING_OPTIONS_NETWORK_WHEREAMI=Internet Options
@@ -700,12 +698,12 @@ OPTION_VALUE_ALL=所有
 ;TODO: SING_ABOUT=About
 ;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+ABOUT_USDX_DEVELOPEDBY=由开发
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
 ;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
+DEVELOPERS_TITLE=由开发
 ;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
