--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -16,14 +16,14 @@ OPTION_VALUE_TITLE=Titel
 OPTION_VALUE_ARTIST=Artist
 OPTION_VALUE_TITLE2=Titel2
 OPTION_VALUE_ARTIST2=Artist2
-;TODO: OPTION_VALUE_YEAR=Year
-;TODO: OPTION_VALUE_DECADE=Decade
+OPTION_VALUE_YEAR=År
+OPTION_VALUE_DECADE=Årtionde
 OPTION_VALUE_PLAYLIST=Spellista
 
-;TODO: OPTION_VALUE_BORDERLESS=Borderless
+OPTION_VALUE_BORDERLESS=Maximerad
 
 OPTION_VALUE_WHENNOVIDEO=När video saknas
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=När ingen video och bild
 
 OPTION_VALUE_SMALL=Liten
 OPTION_VALUE_BIG=Stor
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Auto
 OPTION_VALUE_SEC=Sekund
 OPTION_VALUE_SECS=Sekunder
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+OPTION_VALUE_PLAIN=Stiliserade
+OPTION_VALUE_OLINE1=Med tunn kant
+OPTION_VALUE_OLINE2=Med tjock kant
 
 OPTION_VALUE_SIMPLE=Enkel
 OPTION_VALUE_ZOOM=Zoom
@@ -69,9 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Välj spelare
 OPTION_VALUE_OPEN_MENU=Öppna meny
 
 SING_LOADING=Läser in...
-;TODO: SING_LOADING_SONGS=Loading songs
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Läser in låtar
+SING_LOADING_CHECK_FOLDER=Söka i sånger i mapp %s
+SING_LOADING_LOAD_FOLDER=Läser in låtar från mapp %s
 
 SING_CHOOSE_MODE=Välj läge
 SING_SING=Sjung
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=Inställningar
 SING_OPTIONS_GAME=Spel
 SING_OPTIONS_GRAPHICS=Grafik
 SING_OPTIONS_SOUND=Ljud
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=Text
 SING_OPTIONS_THEMES=Teman
 SING_OPTIONS_RECORD=Inspelning
@@ -112,15 +111,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Svårighetsnivå
 SING_OPTIONS_GAME_LANGUAGE=Språk
 SING_OPTIONS_GAME_TABS=Tabbar
 SING_OPTIONS_GAME_SORTING=Sortering
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Aktivera gamepad
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Inställningar Grafik
 SING_OPTIONS_GRAPHICS_DESC=Grafikinställningar
 SING_OPTIONS_GRAPHICS_RESOLUTION=Upplösning
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Helskärm
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Sångeffekter
+SING_OPTIONS_GRAPHICS_SCREENFADE=Skärmtoning
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Inläsningsanimation
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualisering
 SING_OPTIONS_GRAPHICS_LINEBONUS=Radbonus
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Filmstorlek
@@ -157,14 +156,12 @@ SING_OPTIONS_RECORD_CARD=Ljudkort
 SING_OPTIONS_RECORD_INPUT=Ingång
 SING_OPTIONS_RECORD_CHANNEL=Kanal
 
+SING_OPTIONS_ADVANCED_DEBUG=Debuggning
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloskop
 SING_OPTIONS_ADVANCED_WHEREAMI=Inställningar Avancerat
 SING_OPTIONS_ADVANCED_DESC=Avancerade inställningar
-SING_OPTIONS_ADVANCED_EFFECTSING=Sångeffekter
-SING_OPTIONS_ADVANCED_SCREENFADE=Skärmtoning
-SING_OPTIONS_ADVANCED_LOADANIMATION=Inläsningsanimation
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Säkerhetsfråga
 SING_OPTIONS_ADVANCED_LINEBONUS=Radbonus
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Vid låtval
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Automatisk Partymeny
 
@@ -173,14 +170,14 @@ SING_LEGEND_NAVIGATE=Navigera
 SING_LEGEND_CONTINUE=Fortsätt
 SING_LEGEND_ESC=Tillbaka
 
-;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=Profiler
+SING_PLAYER_READY=Spelare redo att sjunga
+SING_PLAYER_COUNT=Antal spelare
+SING_PLAYER_EDIT=Anpassa en spelare
+SING_PLAYER_NAME=Skriv ditt namn
+SING_PLAYER_COLOR=Välj en färg
+SING_PLAYER_LEVEL=Välj en nivå
+SING_PLAYER_AVATAR=Välj din avatar
 
 SING_DIFFICULTY_DESC=Välj svårighetsgrad
 SING_DIFFICULTY_WHEREAMI=Svårighetsgrad
@@ -195,14 +192,14 @@ SING_SONG_SELECTION_GOTO=Gå till...
 SING_SONG_SELECTION=Låtval
 SING_SONG_SELECTION_MENU=Meny
 SING_SONG_SELECTION_PLAYLIST=Spellista
-;TODO: SING_SONG_IN_CAT=Song
+SING_SONG_IN_CAT=Låt
 SING_SONGS_IN_CAT=Låtar
 PLAYLIST_CATTEXT=Spellista: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_TITLE=Legend
+SING_SONG_SELECTION_LEGEND_VIDEO=Video
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_DUET=Duett
 
 SING_TOTAL=Totalt
 SING_MODE=Sjung solo
@@ -309,8 +306,8 @@ PARTY_PLAYER_ENTER_NAME=skriv namn
 ;TODO: PARTY_ROUNDS_DESC=Select which modes you want to play
 ;TODO: PARTY_ROUNDS_WHEREAMI=Party Rounds
 PARTY_ROUNDS_LEGEND_CONTINUE=starta partyspel
-;TODO: PARTY_ROUNDCOUNT=Number of rounds
-;TODO: PARTY_SELECTMODE=Round %d
+PARTY_ROUNDCOUNT=Antal rundor
+PARTY_SELECTMODE=Runda %d
 
 PARTY_ROUND_DESC=nästa spelare till mikrofonerna
 PARTY_ROUND_WHEREAMI=Party Nästa omgång
@@ -346,22 +343,22 @@ MODE_HOLDTHELINE_NAME=Håll god ton
 ;TODO: MODE_HOLDTHELINEBLIND_NAME=Hold the Blind
 ;TODO: MODE_HOLDTHELINEBLIND_DESC=Keep your rating above the line for the longest, but with the notes hidden!
 
-;TODO: MODE_7000POINTS_NAME=Until 7000
+MODE_7000POINTS_NAME=Fram till 7000
 ;TODO: MODE_7000POINTS_DESC=Race to 7000 Points!
 
-;TODO: MODE_7000POINTSBLIND_NAME=Blind 7000
+MODE_7000POINTSBLIND_NAME=Blind 7000
 ;TODO: MODE_7000POINTSBLIND_DESC=Race to 7000 points, but without seeing the notes!
 
 MODE_5000POINTS_NAME=Till 5000
 ;TODO: MODE_5000POINTS_DESC=Race to 5000 Points!
 
-;TODO: MODE_5000POINTSBLIND_NAME=Blind 5000
+MODE_5000POINTSBLIND_NAME=Blind 5000
 ;TODO: MODE_5000POINTSBLIND_DESC=Race to 5000 points, but without seeing the notes!
 
-;TODO: MODE_2000POINTS_NAME=Until 2000
+MODE_2000POINTS_NAME=Fram till 2000
 ;TODO: MODE_2000POINTS_DESC=Race to 2000 Points!
 
-;TODO: MODE_2000POINTSBLIND_NAME=Blind 2000
+MODE_2000POINTSBLIND_NAME=Blind 2000
 ;TODO: MODE_2000POINTSBLIND_DESC=Race to 2000 points, but without seeing the notes!
 
 MODE_DUEL_NAME=Duell
@@ -376,7 +373,7 @@ MODE_BLIND_NAME=Blindläge
 ;TODO: MODE_BLINDTOTAL_NAME=Total Darkness!
 ;TODO: MODE_BLINDTOTAL_DESC=A duel, but with the notes and the lyrics hidden. Only for the brave!
 
-;TODO: MODE_1000BLIND_NAME = +1000 Blind
+MODE_1000BLIND_NAME = +1000 Blind
 ;TODO: MODE_1000BLIND_DESC = Gain a lead of more than 1000 points, but without seeing the notes!
 
 ;TODO: MODE_DEAF_NAME = Deaf
@@ -385,7 +382,7 @@ MODE_BLIND_NAME=Blindläge
 ;TODO: MODE_BLINDLYRICS_NAME = No Lyrics
 ;TODO: MODE_BLINDLYRICS_DESC = Think you know all the lyrics? Sing with the lyrics hidden!
 
-;TODO: MODE_500BLIND_NAME = +500 Blind
+MODE_500BLIND_NAME = +500 Blind
 ;TODO: MODE_500BLIND_DESC = Gain a lead of more than 500 points, but without seeing the notes!
 
 ;TODO: MODE_SHORTSONG_NAME = Short Song
@@ -452,33 +449,33 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Låten kunde inte laddas: Filen kunde inte hit
 ERROR_CORRUPT_SONG_NO_NOTES=Låten kunde inte laddas: Kan inte hitta toner
 ERROR_CORRUPT_SONG_NO_BREAKS=Låten kunde inte laddas: Kan inte hitta radbrytningar
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Låten kunde inte laddas: Fel på rad %0:d
-;TODO: ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your record options
-;TODO: ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your record options
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Spelare %d är tilldelad flera mikrofoner. Kontrollera dina mikrofonalternativ
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spelare %d är inte tilldelad en mikrofon. Kontrollera dina mikrofonalternativ
 
-;TODO: SING_OPTIONS_NETWORK=Internet
-;TODO: SING_OPTIONS_NETWORK_WHEREAMI=Internet Options
-;TODO: SING_OPTIONS_NETWORK_DESC=Internet General Settings
+SING_OPTIONS_NETWORK=Internet
+SING_OPTIONS_NETWORK_WHEREAMI=Internet-alternativ
+SING_OPTIONS_NETWORK_DESC=Internet allmänna inställningar
 ;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Press key "Insert" to add user to this web...
 ;TODO: SING_OPTIONS_NETWORK_WEBSITE=Website
-;TODO: SING_OPTIONS_NETWORK_USERNAME=Username
-;TODO: SING_OPTIONS_NETWORK_PASSWORD=Password
+SING_OPTIONS_NETWORK_USERNAME=Användarnamn
+SING_OPTIONS_NETWORK_PASSWORD=Lösenord
 ;TODO: SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Send Name
 SING_OPTIONS_NETWORK_AUTO_MODE=Auto
-;TODO: SING_OPTIONS_NETWORK_AUTO_PLAYER=Player
+SING_OPTIONS_NETWORK_AUTO_PLAYER=Spelare
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_EASY=Auto-Send (Easy)
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_MEDIUM=Auto-Send (Medium)
 ;TODO: SING_OPTIONS_NETWORK_AUTO_SCORE_HARD=Auto-Send (Hard)
 ;TODO: SING_OPTIONS_NETWORK_NO_DLL=No compatible leaderboard-plugin found!
 ;TODO: SING_OPTIONS_NETWORK_DELETE_PLAYER=Really delete the user %0:s of the website %1:s?
-;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
-;TODO: SING_OPTIONS_NETWORK_LEGEND_DELETE=Delete
+SING_OPTIONS_NETWORK_LEGEND_INSERT=Föra in
+SING_OPTIONS_NETWORK_LEGEND_DELETE=Radera
 
-;TODO: OPTION_PLAYER_1=Player 1
-;TODO: OPTION_PLAYER_2=Player 2
-;TODO: OPTION_PLAYER_3=Player 3
-;TODO: OPTION_PLAYER_4=Player 4
-;TODO: OPTION_PLAYER_5=Player 5
-;TODO: OPTION_PLAYER_6=Player 6
+OPTION_PLAYER_1=Spelare 1
+OPTION_PLAYER_2=Spelare 2
+OPTION_PLAYER_3=Spelare 3
+OPTION_PLAYER_4=Spelare 4
+OPTION_PLAYER_5=Spelare 5
+OPTION_PLAYER_6=Spelare 6
 OPTION_ALL_PLAYERS=Alla
 OPTION_ALL_SCORES=Alla
 ;TODO: OPTION_VALUE_SAVE=Save
@@ -512,17 +509,17 @@ MSG_INSERT_USER_CANCEL=Ångra
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
 
-;TODO: SONG_SCORE_MAX=Best:
-;TODO: SONG_SCORE_MEDIA=Average:
+SONG_SCORE_MAX=Bäst:
+SONG_SCORE_MEDIA=Genomsnitt:
 
 ;TODO: SCORE_SEND_DESC=Send Score
 ;TODO: SCORE_SEND=Send
-;TODO: SCORE_SEND_PLAYER=Player
+SCORE_SEND_PLAYER=Spelare
 ;TODO: SCORE_SEND_OTHER_USER= Other Username
 ;TODO: SCORE_SAVE=Save
 
-;TODO: SCORE_DOWNLOAD_TITLE=Download
-;TODO: SCORE_DOWNLOAD_SONG=Song:
+SCORE_DOWNLOAD_TITLE=Ladda ner
+SCORE_DOWNLOAD_SONG=Låt:
 ;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
 ;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
 SCORE_DOWNLOAD_CANCEL=Ångra
@@ -541,9 +538,9 @@ SCORE_DOWNLOAD_CANCEL=Ångra
 ;TODO: PARTY_MODE_NOT_AVAILABLE=Not Available!
 
 ;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number and players name
-;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of Players
-;TODO: PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
-;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Final
+PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Antal spelare
+PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Antal rundor
+PARTY_MODE_TOURNAMENT_ROUNDS_FINAL=Slutlig
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL=Semifinals
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_4FINAL=Quarterfinals
 ;TODO: PARTY_MODE_TOURNAMENT_ROUNDS_8FINAL=Round of 16
@@ -555,15 +552,15 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=nästa spelare till mikrofonerna
 ;TODO: INFO_MIDI_CHANNEL_RESET= All channel's on!
 
 ;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
-;TODO: JUKEBOX_RANDOM=Random
-;TODO: JUKEBOX_REPEAT=Repeat
-;TODO: JUKEBOX_FIND=Find:
-;TODO: JUKEBOX_SORT=Sort:
-;TODO: JUKEBOX_SONGLIST=List of Songs
+JUKEBOX_RANDOM=Slumpmässig
+JUKEBOX_REPEAT=Upprepa
+JUKEBOX_FIND=Hitta:
+JUKEBOX_SORT=Sortera:
+JUKEBOX_SONGLIST=Lista över låtar
 
 ;TODO: SING_ERROR_DUET_MODE_PARTY = Duet! Not playable in Party Mode!
 
-;TODO: SONG_MENU_SONG=Song
+SONG_MENU_SONG=Låt
 ;TODO: SONG_MENU_MEDLEY=Medley
 ;TODO: SONG_MENU_SORTING=Sort
 ;TODO: SONG_MENU_EXTRA=Extra
@@ -591,10 +588,10 @@ SING_OPTIONS_WEBCAM_RESOLUTION=Upplösning
 ;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
 ;TODO: SING_OPTIONS_WEBCAM_FLIP=Flip
 SING_OPTIONS_WEBCAM_EFFECT=Effekt
-;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
-;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
+SING_OPTIONS_WEBCAM_BRIGHTNESS=Ljusstyrka
+SING_OPTIONS_WEBCAM_SATURATION=Mättnad
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
-;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
+SING_OPTIONS_WEBCAM_PREVIEW=Aktivera förhandsgranskning
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
 ;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
 
@@ -620,67 +617,67 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Ljudtröskel
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
-;TODO: NAME_PLAYERS_COUNT=Number of Players
-;TODO: NAME_CURRENT_PLAYER=Player
+NAME_PLAYERS_COUNT=Antal spelare
+NAME_CURRENT_PLAYER=Spelare
 
 SING_OPTIONS_GAME_SONGMENU=Låtmeny
-;TODO: OPTION_VALUE_ROULETTE=Roulette
-;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
-;TODO: OPTION_VALUE_CAROUSEL=Carousel
-;TODO: OPTION_VALUE_SLOT_MACHINE=Slot Machine
-;TODO: OPTION_VALUE_LIST=List
-;TODO: OPTION_VALUE_MOSAIC=Tile
+OPTION_VALUE_ROULETTE=Roulett
+OPTION_VALUE_CHESSBOARD=schackbräde
+OPTION_VALUE_CAROUSEL=karusell
+OPTION_VALUE_SLOT_MACHINE=Spelautomat
+OPTION_VALUE_LIST=Lista
+OPTION_VALUE_MOSAIC=Bricka
 
 ;TODO: SING_OPTIONS_JUKEBOX=Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_DESC=Default Configurations of Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Options
 
 OPTION_VALUE_TO_SING=Sjung
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
+OPTION_VALUE_ACTUAL=Övre
+OPTION_VALUE_NEXT=Botten
 ;TODO: OPTION_VALUE_OTHER=Other
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-;TODO: OPTION_VALUE_GRAY=Gray
-;TODO: OPTION_VALUE_WHITE=White
-;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
-;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
-;TODO: OPTION_VALUE_LAVENDER=Lavender
-;TODO: OPTION_VALUE_BEIGE=Beige
-;TODO: OPTION_VALUE_TEAL=Teal
-;TODO: OPTION_VALUE_ORCHID=Orchid
-;TODO: OPTION_VALUE_STEELBLUE=Steel Blue
-;TODO: OPTION_VALUE_PLUM=Plum
-;TODO: OPTION_VALUE_CHOCOLATE=Chocolate
-;TODO: OPTION_VALUE_GOLD=Gold
-;TODO: OPTION_VALUE_DARKBLUE=Dark Blue
-;TODO: OPTION_VALUE_SKY=Sky
-;TODO: OPTION_VALUE_HARLEQUIN=Harlequin
-;TODO: OPTION_VALUE_CYAN=Cyan
-;TODO: OPTION_VALUE_FLAME=Flame
+OPTION_VALUE_GRAY=Grå
+OPTION_VALUE_WHITE=Vit
+OPTION_VALUE_TURQUOISE=Turkos
+OPTION_VALUE_SALMON=Lax
+OPTION_VALUE_GREENYELLOW=Grön gul
+OPTION_VALUE_LAVENDER=Lavendel
+OPTION_VALUE_BEIGE=Beige
+OPTION_VALUE_TEAL=Kricka
+OPTION_VALUE_ORCHID=Orkide
+OPTION_VALUE_STEELBLUE=Stålblå
+OPTION_VALUE_PLUM=Plommon
+OPTION_VALUE_CHOCOLATE=Choklad
+OPTION_VALUE_GOLD=Guld
+OPTION_VALUE_DARKBLUE=Mörkblå
+OPTION_VALUE_SKY=Himmel
+OPTION_VALUE_HARLEQUIN=Harlekin
+OPTION_VALUE_CYAN=Cyan
+OPTION_VALUE_FLAME=Flamma
 
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO=Video Options
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_ASPECT=Aspect
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_WIDTH=Width
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT=Height
+JUKEBOX_SONGOPTIONS_VIDEO=Videoalternativ
+JUKEBOX_SONGOPTIONS_VIDEO_ASPECT=Aspekt
+JUKEBOX_SONGOPTIONS_VIDEO_WIDTH=Bredd
+JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT=Höjd
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Size
+JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Storlek
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
+JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Genomskinlighet
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Färg
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
+JUKEBOX_SONGOPTIONS_LYRIC_LINE=Linje
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_RED=Röd
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_GREEN=Grön
 JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Blå
 
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_STRETCH=Stretch
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO_CROP=Crop
+JUKEBOX_SONGOPTIONS_VIDEO_STRETCH=Sträcka
+JUKEBOX_SONGOPTIONS_VIDEO_CROP=Beskära
 ;TODO: JUKEBOX_SONGOPTIONS_VIDEO_LETTERBOX=LetterBox
 
 ;TODO: JUKEBOX_SONGOPTIONS_SAVE=Save
-;TODO: JUKEBOX_SONGOPTIONS_CLOSE=Close
+JUKEBOX_SONGOPTIONS_CLOSE=Stänga
 ;TODO: JUKEBOX_SONGOPTIONS_DEFAULT=Default
 ;TODO: JUKEBOX_SONGOPTIONS_OPTIONSSAVED=Saved!
 
@@ -696,17 +693,17 @@ JUKEBOX_OPTIONS_PLAYLIST=Spellista
 ;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
 OPTION_VALUE_ALL=Alla
-;TODO: OPTION_VALUE_PLAYER=Player
+OPTION_VALUE_PLAYER=Spelare
 
-;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+SING_ABOUT=Handla om
+SING_ABOUT_DESC=Handla om Ultrastar Deluxe WorldParty
+ABOUT_MAIN=Handla om...
+ABOUT_USDX_DEVELOPEDBY=Utvecklad av
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Upptäck ett nytt sätt att sjunga, ensam, i par eller med vänner. \n Fun är garanterad.\n\nWorldParty är en fork av den ursprungliga versionen Ultrastar Deluxe 1.1 designad och utvecklad av UltraStar España-laget, räknas det med den största karaoke-gemenskapen.\n\n\nDetta program är gratis och libre under GPL-licensen. \n\n Besök oss för mer information.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Utvecklad av
+DEVELOPERS_OVERVIEW=Personer som har bidragit till detta projekt:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besök oss för mer information.\n\nhttps://ultrastar-es.org
