Parsed songs in threads to increase loading speed more than 30% in multicore processors. Removed use of global Line variable to do it

--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SING=Syng
 ;TODO: OPTION_VALUE_OPEN_MENU=Open Menu
 
 SING_LOADING=Loader...
-SING_LOADING_SONGS=Indlæser sange
-SING_LOADING_CHECK_FOLDER=Søgning af sange i mappe %s
-SING_LOADING_LOAD_FOLDER=Indlæser sange fra mappe %s
+SING_LOADING_SONGS=Indlæser sange fra mappe %s
 
 SING_CHOOSE_MODE=Vælg modus
 SING_SING=Syng
