--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Odaberite Igrači
 OPTION_VALUE_OPEN_MENU=Otvorite izbornik
 
 SING_LOADING=Učitavanje...
-SING_LOADING_SONGS=Učitavanje pjesama
-SING_LOADING_CHECK_FOLDER=Pretraživanje pjesama u mapi %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Učitavanje pjesama u mapi %s
 
 SING_CHOOSE_MODE=Izaberi način igre
 SING_SING=Pjevaj
