--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Pasirinkite žaidėjus
 OPTION_VALUE_OPEN_MENU=Atidarykite meniu
 
 SING_LOADING=Kraunasi...
-SING_LOADING_SONGS=Dainų įkėlimas
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-SING_LOADING_LOAD_FOLDER=Įkeliamos dainos iš aplanko %s
+SING_LOADING_SONGS=Įkeliamos dainos iš aplanko %s
 
 SING_CHOOSE_MODE=Pasirinkite režimą
 SING_SING=Dainuoti
