--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Játékos választás
 OPTION_VALUE_OPEN_MENU=Menü megnyitása
 
 SING_LOADING=Betöltés...
-SING_LOADING_SONGS=Dalok betöltése
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Dalok betöltése %s
 
 SING_CHOOSE_MODE=Válassz menüpontot
 SING_SING=Ének
