--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Wybierz graczy
 OPTION_VALUE_OPEN_MENU=Otwórz Menu
 
 SING_LOADING=Wczytywanie...
-SING_LOADING_SONGS=Ładowanie utworów
-SING_LOADING_CHECK_FOLDER=Wyszukiwanie utworów w folderze %s
-SING_LOADING_LOAD_FOLDER=Ładowanie utworów z folderu %s
+SING_LOADING_SONGS=Ładowanie utworów z folderu %s
 
 SING_CHOOSE_MODE=Wybierz tryb
 SING_SING=Śpiewaj
