--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Выбор игроков
 OPTION_VALUE_OPEN_MENU=Открыть меню
 
 SING_LOADING=Загрузка...
-;TODO: SING_LOADING_SONGS=Loading songs
-SING_LOADING_CHECK_FOLDER=Поиск композиций в папке %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+;TODO: SING_LOADING_SONGS=Поиск композиций в папке %s
 
 SING_CHOOSE_MODE=Выберите режим
 SING_SING=Пение
