--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Valitse pelaajat
 OPTION_VALUE_OPEN_MENU=Avaa valikko
 
 SING_LOADING=Moikkamoi! Tää systeemi niinku lataa...
-SING_LOADING_SONGS=Ladataan kappaleita
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Ladataan kappaleita %s
 
 SING_CHOOSE_MODE=Valitse moodi
 SING_SING=Laula
