--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Välj spelare
 OPTION_VALUE_OPEN_MENU=Öppna meny
 
 SING_LOADING=Läser in...
-SING_LOADING_SONGS=Läser in låtar
-SING_LOADING_CHECK_FOLDER=Söka i sånger i mapp %s
-SING_LOADING_LOAD_FOLDER=Läser in låtar från mapp %s
+SING_LOADING_SONGS=Läser in låtar från mapp %s
 
 SING_CHOOSE_MODE=Välj läge
 SING_SING=Sjung
