--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Velja Leikmenn
 OPTION_VALUE_OPEN_MENU=Opna Valmynd
 
 SING_LOADING=Hleður...
-SING_LOADING_SONGS=Hleðsla lög
-SING_LOADING_CHECK_FOLDER=Leita lög í möppunni %s
-SING_LOADING_LOAD_FOLDER=Hleður lög frá möppu %s
+SING_LOADING_SONGS=Hleður lög frá möppu %s
 
 SING_CHOOSE_MODE=Velja valmynd
 SING_SING=Syngja
