--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -69,9 +69,7 @@ OPTION_VALUE_SELECT_PLAYERS=Изаберите играче
 OPTION_VALUE_OPEN_MENU=Отворите мени
 
 SING_LOADING=Ucitava se...
-SING_LOADING_SONGS=Учитавање песама
-SING_LOADING_CHECK_FOLDER=Претраживање песме у фолдеру %s
-SING_LOADING_LOAD_FOLDER=Лоадинг песме из фолдера %s
+SING_LOADING_SONGS=Лоадинг песме из фолдера %s
 
 SING_CHOOSE_MODE=Izaberi mod
 SING_SING=pevaj
