Drop dead options from song menu

--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -561,10 +561,8 @@ JUKEBOX_SONGLIST=Liste de chansons
 
 ;TODO: SING_ERROR_DUET_MODE_PARTY = Duet! Not playable in Party Mode!
 
-;TODO: SONG_MENU_SONG=Song
+SONG_MENU_SONG=Chanson
 ;TODO: SONG_MENU_MEDLEY=Medley
-;TODO: SONG_MENU_SORTING=Sort
-;TODO: SONG_MENU_EXTRA=Extra
 
 SONG_MENU_NAME_SONG=Menu
 ;TODO: SONG_MENU_NAME_MEDLEY=Medley Menu
