Fix entry number in stats screen

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -406,7 +406,7 @@ STAT_DETAIL_WHEREAMI=Estadístiques
 STAT_NEXT=Següent pàgina
 STAT_PREV=Pàgina anterior
 STAT_REVERSE=Ordre invers
-STAT_PAGE=%0:d de %1:d Pàgines\n (%2:d de %3:d Entrades)
+STAT_PAGE=%0:d de %1:d Pàgines\n Entrades %2:d de %3:d
 
 STAT_DESC_SCORES=Màximes puntuacions
 STAT_DESC_SCORES_REVERSED=Mínimes puntuacions
