--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -407,7 +407,7 @@ STAT_DETAIL_WHEREAMI=Detaljerede Statestikker
 STAT_NEXT=Næste Side
 STAT_PREV=Tidligere Side
 STAT_REVERSE=Omvendt Orden
-STAT_PAGE=Seite %0:d of %1:d Pages\n (%2:d of %3:d Entrys)
+STAT_PAGE=Seite %0:d of %1:d Pages \n Entries %2:d of %3:d
 
 STAT_DESC_SCORES=HighScore
 STAT_DESC_SCORES_REVERSED=LowScore
