--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -409,7 +409,7 @@ STAT_DETAIL_WHEREAMI=Detaillierte Statistiken
 STAT_NEXT=Nächste Seite
 STAT_PREV=Vorherige Seite
 STAT_REVERSE=Umkehren
-STAT_PAGE=Seite %0:d von %1:d\n(%2:d von %3:d Einträgen)
+STAT_PAGE=Seite %0:d von %1:d \n Einträgen %2:d von %3:d
 
 STAT_DESC_SCORES=Höchstpunktzahl
 STAT_DESC_SCORES_REVERSED=Niedrigste Punktzahl
