--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -407,7 +407,7 @@ STAT_DETAIL_WHEREAMI=Detail Statistics
 STAT_NEXT=Next Page
 STAT_PREV=Previous Page
 STAT_REVERSE=Reverse Order
-STAT_PAGE=Page %0:d of %1:d pages\n (%2:d of %3:d Entrys)
+STAT_PAGE=Page %0:d of %1:d \n Entries %2:d of %3:d 
 
 STAT_DESC_SCORES=HighScores
 STAT_DESC_SCORES_REVERSED=LowScores
