--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -415,7 +415,7 @@ STAT_DETAIL_WHEREAMI=Estadísticas detalladas
 STAT_NEXT=Siguiente
 STAT_PREV=Anterior
 STAT_REVERSE=Invertir el orden
-STAT_PAGE=Página %0:d de %1:d \n (%2:d ítems de un total de %3:d)
+STAT_PAGE=Página %0:d de %1:d \n Registros %2:d de %3:d
 
 STAT_DESC_SCORES=Calificaciones
 STAT_DESC_SCORES_REVERSED=Peores Calificaciones
