--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -407,7 +407,7 @@ STAT_DETAIL_WHEREAMI=Estatistika zehatzak
 STAT_NEXT=Hurrengo orria
 STAT_PREV=Aurreko orria
 STAT_REVERSE=Ordena alderanztu
-STAT_PAGE=Seite %0:d orri %1:dtik \n (%2:d sarrera %3:dtik)
+STAT_PAGE=Seite %0:d orri %1:d tik \n Tik %2:d sarrera %3:d
 
 STAT_DESC_SCORES=Puntuazio onenak
 STAT_DESC_SCORES_REVERSED=Puntuazio txarrenak
