--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -408,7 +408,7 @@ STAT_DETAIL_WHEREAMI=Statistiques détaillées
 STAT_NEXT=Page suiv.
 STAT_PREV=Page préc.
 STAT_REVERSE=Inverser
-STAT_PAGE=Page %0:d de %1:d \n (%2:d entrées sur %3:d)
+STAT_PAGE=Page %0:d de %1:d \n Entrées %2:d sur %3:d
 
 STAT_DESC_SCORES=Meilleurs Scores
 STAT_DESC_SCORES_REVERSED=Pires scores
