--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Estatísticas detalladas
 STAT_NEXT=Seguinte
 STAT_PREV=Anterior
 STAT_REVERSE=Invertilo orde
-STAT_PAGE=Páxina %0:d de %1:d \n (%2:d ítems dun total de %3:d)
+STAT_PAGE=Páxina %0:d de %1:d \n Rexistros %2:d de %3:d
 
 STAT_DESC_SCORES=Puntación
 STAT_DESC_SCORES_REVERSED=Peores puntacións
