--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -407,7 +407,7 @@ STAT_DETAIL_WHEREAMI=Stadastaireachd
 STAT_NEXT=An ath-dhuilleag
 STAT_PREV=An duilleag roimhpe
 STAT_REVERSE=Òrdugh contrarra
-STAT_PAGE=Duilleag %0:d à %1:d\n(innteart %2:d à %3:d)
+STAT_PAGE=Duilleag %0:d à %1:d \n Innteart %2:d à %3:d
 
 STAT_DESC_SCORES=Sgòran àrda
 STAT_DESC_SCORES_REVERSED=Sgòran ìosal
