--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Detaljna statistika
 STAT_NEXT=Sljed. strana
 STAT_PREV=Preth. strana
 STAT_REVERSE=Obrnuti redoslijed
-STAT_PAGE=Strana %0:d od %1:d\n (%2:d od %3:d unosa)
+STAT_PAGE=Strana %0:d od %1:d \n Unosa %2:d od %3:d
 
 STAT_DESC_SCORES=HighScores
 STAT_DESC_SCORES_REVERSED=LowScores
