--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Dettagli Statistiche
 STAT_NEXT=Prossima Pagina
 STAT_PREV=Pagina Precedente
 STAT_REVERSE=Ordine Inverso
-STAT_PAGE=Pagina %0:d di %1:d Pagine\n (%2:d di %3:d Inserimenti)
+STAT_PAGE=Pagina %0:d di %1:d \n Inserimenti %2:d di %3:d
 
 STAT_DESC_SCORES=Punteggi alti
 STAT_DESC_SCORES_REVERSED=Punteggi bassi
