--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -406,7 +406,7 @@ STAT_DETAIL=Statistika
 STAT_NEXT=Kitas puslapis
 STAT_PREV=Ankstesnis puslapis
 STAT_REVERSE=Atvirkštinė tvarka
-;TODO: STAT_PAGE=Page %0:d of %1:d pages\n (%2:d of %3:d Entrys)
+;TODO: STAT_PAGE=Page %0:d of %1:d \n Entries %2:d of %3:d
 
 ;TODO: STAT_DESC_SCORES=HighScores
 ;TODO: STAT_DESC_SCORES_REVERSED=LowScores
