--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Detailléiert Statistiken
 STAT_NEXT=Nächst Säit
 STAT_PREV=Vireg Säit
 STAT_REVERSE=Ëmkéieren
-STAT_PAGE=Säit %0:d/%1:d \n (%2:d Antrag vun %3:d %3:d )
+STAT_PAGE=Säit %0:d/%1:d \n Antrag %2:d vun %3:d
 
 STAT_DESC_SCORES=Highscore
 STAT_DESC_SCORES_REVERSED=Schlechtst Punkten
