--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Részletes
 STAT_NEXT=Következő oldal
 STAT_PREV=Elöző oldal
 STAT_REVERSE=Ellenkező sorrend
-STAT_PAGE=Seite %0:d of %1:d Oldalak\n (%2:d of %3:d Entrys)
+STAT_PAGE=Seite %0:d of %1:d \n Entries %2:d of %3:d
 
 STAT_DESC_SCORES=Legjobb eredmény
 STAT_DESC_SCORES_REVERSED=Alacsony pontszám
