--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Gedetailleerde statistieken
 STAT_NEXT=Volgende Pagina
 STAT_PREV=Vorige Pagina
 STAT_REVERSE=Omgekeerde Volgorde
-STAT_PAGE=Pagina %0:d van de %1:d Paginas\n (%2:d van de %3:d scores)
+STAT_PAGE=Pagina %0:d van de %1:d \n Scores %2:d van de %3:d
 
 STAT_DESC_SCORES=Topscore
 STAT_DESC_SCORES_REVERSED=Laagste scores
