--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -406,7 +406,7 @@ STAT_DETAIL_WHEREAMI=Detaljert statistikk
 STAT_NEXT=Neste side
 STAT_PREV=Forrige side
 STAT_REVERSE=Bytt rekkefølge
-STAT_PAGE=Side %0:d av %1:d Sider\n (%2:d av %3:d )
+STAT_PAGE=Side %0:d av %1:d \n Poster %2:d av %3:d
 
 STAT_DESC_SCORES=Toppscore
 STAT_DESC_SCORES_REVERSED=Bunnscore
