--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Statystyki szczegółowe
 STAT_NEXT=Następna strona
 STAT_PREV=Poprzednia strona
 STAT_REVERSE=Odwróć kolejność
-STAT_PAGE=strona %0:d z %1:d stron\n (%2:d z %3:d wpisów)
+STAT_PAGE=Strona %0:d z %1:d \n Wpisów %2:d z %3:d
 
 STAT_DESC_SCORES=Najwyższe wyniki
 STAT_DESC_SCORES_REVERSED=Najniższe wyniki
