--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Estatísticas Detalhadas
 STAT_NEXT=Página Seguinte
 STAT_PREV=Página Anterior
 STAT_REVERSE=Ordem Inversa
-STAT_PAGE=%0:d de %1:d Páginas\n (%2:d de %3:d Entradas)
+STAT_PAGE=%0:d de %1:d Páginas \n %2:d de %3:d Entradas
 
 STAT_DESC_SCORES=Pontuações Altas
 STAT_DESC_SCORES_REVERSED=Pontuações Baixas
