--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Подробная статистика
 STAT_NEXT=След. страница
 STAT_PREV=Пред. страница
 STAT_REVERSE=В обр. порядке
-STAT_PAGE=страница %0:d из %1:d\n (%2:d из %3:d)
+STAT_PAGE=Cтраница %0:d из %1:d \n Yчет %2:d из %3:d
 
 STAT_DESC_SCORES=Лучшие игры
 STAT_DESC_SCORES_REVERSED=Худшие игры
