--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Statistici detaliate
 STAT_NEXT=Următoarele
 STAT_PREV=Anterioare
 STAT_REVERSE=Schimbă ordinea
-STAT_PAGE=Pagina %0:d din %1:d pagini\n (%2:d din %3:d elemente)
+STAT_PAGE=Pagina %0:d din %1:d \n Elemente %2:d din %3:d
 
 STAT_DESC_SCORES=Top punctaje
 STAT_DESC_SCORES_REVERSED=Cele mai mici punctaje
