--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Podrobná štatistika
 STAT_NEXT=Ďalšia strana
 STAT_PREV=Predošlá strana
 STAT_REVERSE=Otoč poradie
-STAT_PAGE=%0:d. z %1:d strán\n (%2:d z %3:d položiek)
+STAT_PAGE=%0:d. z %1:d strán \n %2:d z %3:d Položiek
 
 STAT_DESC_SCORES=Najvyššie skóre
 STAT_DESC_SCORES_REVERSED=Najhoršie skóre
