--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Podrobna statistika
 STAT_NEXT=Naslednja stran
 STAT_PREV=Prejšnja stran
 STAT_REVERSE=Obratni vrstni red
-STAT_PAGE=Stran %0:d od %1:d strani\n (%2:d od %3:d zapisov)
+STAT_PAGE=Stran %0:d od %1:d \n Zapisov %2:d od %3:d
 
 STAT_DESC_SCORES=Najboljši rezultati
 STAT_DESC_SCORES_REVERSED=Najslabši rezultati
