--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Tarkat tilastot
 STAT_NEXT=Seuraava sivu
 STAT_PREV=Edellinen sivu
 STAT_REVERSE=Käänteinen järjestys
-STAT_PAGE=Seite %0:d of %1:d Pages\n (%2:d of %3:d Entrys)
+STAT_PAGE=Seite %0:d of %1:d \n %2:d of %3:d
 
 STAT_DESC_SCORES=Korkeimmat pisteet
 STAT_DESC_SCORES_REVERSED=Surikeimmat pisteet
