--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Detaljerad statistik
 STAT_NEXT=Nästa sida
 STAT_PREV=Föregående sida
 STAT_REVERSE=Omvänd ordning
-STAT_PAGE=Sida %0:d av %1:d sidor\n (%2:d av %3:d poster)
+STAT_PAGE=Sida %0:d av %1:d sidor \n %2:d av %3:d Poster
 
 STAT_DESC_SCORES=Högsta resultat
 STAT_DESC_SCORES_REVERSED=Lägsta resultat
