--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -406,7 +406,7 @@ STAT_DETAIL_WHEREAMI=Ítarleg Tölfræði
 STAT_NEXT=Næsta síða
 STAT_PREV=Fyrri síða
 STAT_REVERSE=Öfug röð
-STAT_PAGE=Blaðsíða %0:d af %1:d blaðsíðum (%2:d af %3:d færslum)
+STAT_PAGE=Blaðsíða %0:d af %1:d \n Færslum %2:d af %3:d
 
 STAT_DESC_SCORES=Hæstu stig
 STAT_DESC_SCORES_REVERSED=Lægstu stig
