--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -406,7 +406,7 @@ STAT_DETAIL_WHEREAMI=Podrobné statistiky
 STAT_NEXT=Další stránka
 STAT_PREV=Předchozí stránka
 STAT_REVERSE=Opačné pořadí
-STAT_PAGE=Strana %0:d z %1:d stránek\n (%2:d z %3:d záznamů)
+STAT_PAGE=Strana %0:d z %1:d stránek \n Záznamů %2:d z %3:d
 
 STAT_DESC_SCORES=Nejvyšší skóre
 STAT_DESC_SCORES_REVERSED=Nejnižší skóre
