--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Λεπτομερή στατιστικά
 STAT_NEXT=Επόμενη Σελίδα
 STAT_PREV=Προηγούμενη σελίδα
 STAT_REVERSE=Αντίστροφα
-STAT_PAGE=Seite %0:d από %1:d σελίδες\n (%2:d of %3:d εισαγωγές)
+STAT_PAGE=Seite %0:d από %1:d σελίδες \n %2:d of %3:d εισαγωγές
 
 STAT_DESC_SCORES=Υψηλότερες Βαθμολογίες
 STAT_DESC_SCORES_REVERSED=Χαμηλότερες βαθμολογίες
