--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=Detalji Statistike
 STAT_NEXT=Sledeca Strana
 STAT_PREV=Prethodna Strana
 STAT_REVERSE=Obrnuti Redosled
-STAT_PAGE=Seite %0:d of %1:d strana\n (%2:d od %3:d unosa)
+STAT_PAGE=Seite %0:d of %1:d strana \n %2:d od %3:d Unosa
 
 STAT_DESC_SCORES=NajboljiRezultati
 STAT_DESC_SCORES_REVERSED=NajgoriRezultati
