--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=統計の詳しい事
 STAT_NEXT=次ページ
 STAT_PREV=先ページ
 STAT_REVERSE=逆の順番
-STAT_PAGE= %1:d ページの %0:d 番目\n (%3:d エントリーの %2:d 番目)
+STAT_PAGE= %1:d ページの %0:d 番目 \n %3:d エントリーの %2:d 番目
 
 STAT_DESC_SCORES=ハイスコア
 STAT_DESC_SCORES_REVERSED=ロースコア
