--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -405,7 +405,7 @@ STAT_DETAIL_WHEREAMI=统计详情
 STAT_NEXT=下一页
 STAT_PREV=前一页
 STAT_REVERSE=倒序
-STAT_PAGE= %1:d 页中的第 %0:d 页\n ( %3:d 条目中的 %2:d )
+STAT_PAGE= %1:d 页中的第 %0:d 页 \n %3:d 条目中的 %2:d
 
 STAT_DESC_SCORES=高分
 STAT_DESC_SCORES_REVERSED=低分
